<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:id="@+id/about_page"
    android:paddingTop="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/display_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/display_about_me"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="20dp"/>
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/my_photo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="@id/display_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        android:src="@drawable/pic_about_me"
        app:shapeAppearanceOverlay="@style/circleImageView"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/my_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/my_name"
        app:layout_constraintTop_toBottomOf="@id/my_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/my_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/my_email"
        app:layout_constraintTop_toBottomOf="@id/my_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/display_sosial_media"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/my_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/display_sosial_media"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_my_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintTop_toBottomOf="@id/display_sosial_media"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn_my_insta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/instagram"
        app:layout_constraintTop_toBottomOf="@id/btn_my_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_my_github"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/github"
        app:layout_constraintTop_toBottomOf="@id/btn_my_insta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>