<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_detail"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <ImageView
            android:id="@+id/img_item_detail"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@tools:sample/avatars"/>

        <TextView
            android:id="@+id/name_item_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/img_item_detail"
            app:layout_constraintTop_toTopOf="@id/img_item_detail"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            tools:text="@string/anime_name"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/status_item_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Status : On Going"
            app:layout_constraintTop_toBottomOf="@id/name_item_detail"
            app:layout_constraintStart_toEndOf="@id/img_item_detail"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/season_item_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Season: 20"
            app:layout_constraintTop_toBottomOf="@id/status_item_detail"
            app:layout_constraintStart_toEndOf="@id/img_item_detail"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/studios_item_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Studio: asdasdasd"
            app:layout_constraintTop_toBottomOf="@id/season_item_detail"
            app:layout_constraintStart_toEndOf="@id/img_item_detail"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/text_main_char"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/display_main_character"
            app:layout_constraintTop_toBottomOf="@id/img_item_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="12dp" />

        <HorizontalScrollView
            android:id="@+id/main_char_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_main_char"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp" >

                <ImageView
                    android:id="@+id/item_img_main_char"
                    android:layout_width="80dp"
                    android:layout_height="70dp"
                    tools:src="@tools:sample/avatars"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/item_name_main_char"/>

                <TextView
                    android:id="@+id/item_name_main_char"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    tools:text="Monkey D. Luffy"
                    app:layout_constraintTop_toBottomOf="@id/item_img_main_char"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="4dp"
                    android:gravity="center"/>

                <ImageView
                    android:id="@+id/item_img_main_char2"
                    android:layout_width="80dp"
                    android:layout_height="70dp"
                    tools:src="@tools:sample/avatars"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="@id/item_img_main_char"
                    app:layout_constraintStart_toStartOf="@id/item_name_main_char2"
                    app:layout_constraintEnd_toEndOf="@id/item_name_main_char2"/>

                <TextView
                    android:id="@+id/item_name_main_char2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    tools:text="Monkey D. Luffy"
                    app:layout_constraintTop_toBottomOf="@id/item_img_main_char2"
                    app:layout_constraintStart_toEndOf="@id/item_name_main_char"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="12dp"
                    android:gravity="center"/>

                <ImageView
                    android:id="@+id/item_img_main_char3"
                    android:layout_width="80dp"
                    android:layout_height="70dp"
                    tools:src="@tools:sample/avatars"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="@id/item_img_main_char"
                    app:layout_constraintStart_toStartOf="@id/item_name_main_char3"
                    app:layout_constraintEnd_toEndOf="@id/item_name_main_char3"/>

                <TextView
                    android:id="@+id/item_name_main_char3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    tools:text="Monkey D. Luffy"
                    app:layout_constraintTop_toBottomOf="@id/item_img_main_char2"
                    app:layout_constraintStart_toEndOf="@id/item_name_main_char2"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="12dp"
                    android:gravity="center"/>

                <ImageView
                    android:id="@+id/item_img_main_char4"
                    android:layout_width="80dp"
                    android:layout_height="70dp"
                    tools:src="@tools:sample/avatars"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="@id/item_img_main_char"
                    app:layout_constraintStart_toStartOf="@id/item_name_main_char4"
                    app:layout_constraintEnd_toEndOf="@id/item_name_main_char4"/>

                <TextView
                    android:id="@+id/item_name_main_char4"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    tools:text="Monkey D. Luffy"
                    app:layout_constraintTop_toBottomOf="@id/item_img_main_char3"
                    app:layout_constraintStart_toEndOf="@id/item_name_main_char3"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="12dp"
                    android:gravity="center"/>

                <ImageView
                    android:id="@+id/item_img_main_char5"
                    android:layout_width="80dp"
                    android:layout_height="70dp"
                    tools:src="@tools:sample/avatars"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="@id/item_img_main_char"
                    app:layout_constraintStart_toStartOf="@id/item_name_main_char5"
                    app:layout_constraintEnd_toEndOf="@id/item_name_main_char5"/>

                <TextView
                    android:id="@+id/item_name_main_char5"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    tools:text="Monkey D. Luffy"
                    app:layout_constraintTop_toBottomOf="@id/item_img_main_char4"
                    app:layout_constraintStart_toEndOf="@id/item_name_main_char4"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="12dp"
                    android:gravity="center"/>

            </androidx.constraintlayout.widget.ConstraintLayout>



        </HorizontalScrollView>

        <TextView
            android:id="@+id/text_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/display_genre"
            app:layout_constraintTop_toBottomOf="@id/main_char_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/genres_anime_item_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="fantasy, isekai, harem, action, comedy"
            app:layout_constraintTop_toBottomOf="@id/text_genre"
            app:layout_constraintStart_toStartOf="@id/text_genre"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/text_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/display_description"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/genres_anime_item_detail"
            app:layout_constraintStart_toStartOf="@id/genres_anime_item_detail"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/description_anime_item_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/text_description"
            app:layout_constraintTop_toBottomOf="@id/text_description"
            tools:text="@string/description" />

        <Button
            android:id="@+id/btn_share_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/share"
            app:layout_constraintTop_toBottomOf="@id/description_anime_item_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>